# arch-xmonad

./: .gitignore  arch-xmonad.cabal  build  cabal.project.freeze  hie.yaml  xmonad.hs
