name:                arch-xmonad
version:             0.1.0.0
author:              francois
maintainer:          francois@mahoneko.net
build-type:          Simple
cabal-version:       >=1.10
                     
executable xmonad
  main-is:             xmonad.hs
  ghc-options:         -Wall
  build-depends:       xmonad,
                       xmonad-contrib,
                       base                  >= 4.11 && < 5
  default-language:    Haskell2010
